--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "limits": "cpp",
     "ratio": "cpp",
     "tuple": "cpp",
-    "fstream": "cpp"
+    "fstream": "cpp",
+    "string": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "clang",
   "C_Cpp_Runner.cppCompilerPath": "g++",
