--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ project(1)
 
 set(CMAKE_CXX_STANDARD 17)
 
+include_directories(${PROJECT_SOURCE_DIR})
+
+
 add_library(
+        1
         BlockChain.h
         Transaction.h
         Utilities.h
@@ -13,6 +17,7 @@ add_library(
 
 
 add_executable(
+        1
         mtm_blockchain
         main.cpp
 )
