--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(
         Transaction.h
         Utilities.h
         Transaction.cpp
+        Blockchain.cpp 
         Utilities.cpp
 )
 
